# awssh

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bump_version.sh  flake.nix  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml
src/awssh/: __init__.py  __main__.py  _version.py  autocompleter.py  awssh.py
src/ssm_ssh/: __init__.py  __main__.py  autocompleter.py  ssm_ssh.py
tests/: test_awssh.py  test_example.py
tools/: awssh-completion.bash
